--- a/libft/Makefile
+++ b/libft/Makefile
@@ -74,6 +74,7 @@ SRCS 		= 		ft_isalpha.c \
 					ft_calloc.c \
 					ft_strlen.c \
 					ft_strlcpy.c \
+					ft_strcat.c \
 					ft_strlcat.c \
 					ft_strchr.c \
 					ft_strrchr.c \
