--- a/libft/Makefile
+++ b/libft/Makefile
@@ -78,6 +78,7 @@ SRCS 		= 		ft_isalpha.c \
 					ft_strlcat.c \
 					ft_strchr.c \
 					ft_strrchr.c \
+					ft_strcmp.c \
 					ft_strncmp.c \
 					ft_strnstr.c \
 					ft_strdup.c \
